--- a/package.json
+++ b/package.json
@@ -4,12 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "local": "SLS_DEBUG=*  NODE_DEBUG=appsync-* serverless offline start"
   },
   "author": "Himanshu Joshi",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.2",
+    "@aws-sdk/client-dynamodb": "^3.45.0",
+    "express": "^4.17.2"
+  },
+  "devDependencies": {
+    "@types/serverless": "^1.78.40",
+    "@types/typescript": "^2.0.0",
+    "serverless": "^2.70.0",
+    "serverless-appsync-offline": "^1.4.0",
+    "serverless-dynamodb-local": "^0.2.40",
+    "serverless-offline": "^8.3.1",
     "typescript": "^4.5.4"
   }
 }
