--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "serverless-appsync-offline": "^1.4.0",
     "serverless-dynamodb-local": "^0.2.40",
     "serverless-offline": "^8.3.1",
-    "typescript": "^4.5.4"
+    "serverless-webpack": "^5.6.0",
+    "ts-loader": "^9.2.6",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "typescript": "^4.5.4",
+    "webpack": "^5.65.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
